[package]
name = "delta-encoding"
version = "0.1.0"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A library to encode and decode a delta-encoded stream of numbers"
repository = "https://github.com/nyurik/delta-encoding"
keywords = ["delta-encoding", "encoding", "encoder", "decoder", "protobuf"]

[dependencies]
num-traits = "0.2"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "encoder"
harness = false
