[package]
name = "delta-encoding"
version = "0.4.1"
description = "A library to encode and decode a delta-encoded stream of numbers"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/delta-encoding"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["delta-encoding", "encoding", "encoder", "decoder", "protobuf"]
categories = ["encoding"]
rust-version = "1.78.0"

[dependencies]
num-traits = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "encoder"
harness = false

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
