[package]
name = "delta-encoding"
version = "0.4.3"
description = "A library to encode and decode a delta-encoded stream of numbers"
authors = ["Yuri Astrakhan <YuriAstrakhan@gmail.com>"]
repository = "https://github.com/nyurik/delta-encoding"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["delta-encoding", "encoding", "encoder", "decoder", "protobuf"]
categories = ["encoding"]
rust-version = "1.78"

[dependencies]
num-traits = "0.2"

[lints]
workspace = true

[workspace]
# Use `just bench` or `cargo bench -p bench` to run the benchmarks.
resolver = "2"
members = [".", "bench"]
default-members = ["."]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
