[package]
name = "bench"
description = "Benchmarks to run with `cargo bench`"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
delta-encoding = { path = ".." }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
