[package]
name = "bench"
description = "Benchmarks to run with `cargo bench`"
version = "0.0.0"
edition = "2021"
publish = false

[[bench]]
name = "bench"
harness = false

[dependencies]
delta-encoding = { path = ".." }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
